--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,6 @@
     <string name="mutiplica">*</string>
     <string name="restar">-</string>
     <string name="suma">+</string>
-    <string name="memo">Memo</string>
+    <string name="memo">MS</string>
 
 </resources>
